fix: code snippet title overflowing code itself

--- a/src/assets/styles/code.scss
+++ b/src/assets/styles/code.scss
@@ -364,14 +364,19 @@ pre .logger.log-log svg {
 }
 
 pre .code-title {
-  position: absolute;
-  top: 0.25rem;
-  right: 1rem;
-
-  width: fit-content;
-  max-width: calc(100% - 2rem);
-
+  --pre-padding: 12px;
+  
   text-align: right;
+
+  width: calc(100%);
+
+  padding: 0 var(--pre-padding);
+  margin: calc(var(--pre-padding) * -1) calc(var(--pre-padding) * -1) 0;
+
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+
+  background-color: #1f2024;
 
   transition: opacity 0.4s var(--ease-out-cubic);
 }
